force-app/main/default/objects/Opportunity/fields/Actual_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Close_Date__c</fullName>
    <inlineHelpText>Date is system generated upon closing of the opportunity, to amend please contact an administrator.</inlineHelpText>
    <label>Actual Close Date</label>
    <type>Date</type>
</CustomField>