force-app/main/default/objects/Opportunity/fields/Amount_Text__c.field-meta.xml
<CustomField>
    <fullName>Amount_Text__c</fullName>
    <description>This field has been created to store the opportunity amount in a text format for the TPS feed. Using the standard amount field, there were issues in the field format which could not be read by Team Tracker.</description>
    <formula>Text(Amount)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount (Text)</label>
    <type>Text</type>
</CustomField>