force-app/main/default/objects/Opportunity/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>SFP-9325 [c] This field is used in the opportunity approval process when deal is closed lost. It is automatically updated to indicate the Approval Process current status</description>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Awaiting for Next Approver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>