force-app/main/default/objects/Opportunity/fields/Business_Assessment_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Assessment_Approval_Date__c</fullName>
    <description>Date when related Business Assessment has been approved [SFP-6735]</description>
    <inlineHelpText>Date when the related Business Assessment has been approved. If Opportunity is related to multiple Business Assessment, date from the most recently updated one is reflected on the opportunity.</inlineHelpText>
    <label>Business Assessment Approval</label>
    <type>DateTime</type>
</CustomField>