force-app/main/default/objects/Opportunity/fields/Business_Assessment_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Business_Assessment_Milestone__c</fullName>
    <description>Value copied from Milestone__c on Business Assessment [SFP-6735]</description>
    <inlineHelpText>Milestone of the related Business Assessment. If Opportunity is related to multiple Business Assessment, URL of the most recently updated one is reflected on the opportunity.</inlineHelpText>
    <label>Business Assessment Milestone/ Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>