force-app/main/default/objects/Opportunity/fields/Business_Assessment_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Assessment_Name__c</fullName>
    <description>Business Assessment name [SFP-6735]</description>
    <inlineHelpText>Name of the related Business Assessment. If Opportunity is related to multiple Business Assessment, name from the most recently updated one is reflected on the opportunity.</inlineHelpText>
    <label>Business Assessment Name (Number)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>