force-app/main/default/objects/Opportunity/fields/Business_Assessment_URL__c.field-meta.xml
<CustomField>
    <fullName>Business_Assessment_URL__c</fullName>
    <description>Business Assessment URL [SFP-6735]</description>
    <inlineHelpText>Business Assessment URL</inlineHelpText>
    <label>Business Assessment URL</label>
    <type>Url</type>
</CustomField>