force-app/main/default/objects/Opportunity/fields/CIFID__c.field-meta.xml
<CustomField>
    <fullName>CIFID__c</fullName>
    <formula>Account.CIF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CIFID</label>
    <type>Text</type>
</CustomField>