force-app/main/default/objects/Opportunity/fields/Client_Group_Parent__c.field-meta.xml
<CustomField>
    <fullName>Client_Group_Parent__c</fullName>
    <description>EMEA_SOW_StandardBank_009: The Group Parent of the Opportunities Client record. Calculated field so no hover information available.</description>
    <formula>Account.Group_Parent_Client_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Group Parent of this Opportunities Client record.</inlineHelpText>
    <label>Client Group Parent</label>
    <type>Text</type>
</CustomField>