force-app/main/default/objects/Opportunity/fields/Client_Group_Parent_Text__c.field-meta.xml
<CustomField>
    <fullName>Client_Group_Parent_Text__c</fullName>
    <formula>Account.Group_Parent__r.Name</formula>
    <label>Client Group Parent Text</label>
    <type>Text</type>
</CustomField>