force-app/main/default/objects/Opportunity/fields/Client_Immediate_Parent__c.field-meta.xml
<CustomField>
    <fullName>Client_Immediate_Parent__c</fullName>
    <description>EMEA_SOW_StandardBank_009: The Immediate Parent of the Opportunities Client record. Calculated field so no hover information available.</description>
    <formula>HYPERLINK( &quot;/&quot; + Account.Immediate_Parent__r.Id, Account.Immediate_Parent__r.Name, &quot;_top&quot;)</formula>
    <inlineHelpText>The Immediate Parent of this Opportunities Client record.</inlineHelpText>
    <label>Client Immediate Parent</label>
    <type>Text</type>
</CustomField>