force-app/main/default/objects/Opportunity/fields/Client_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Owner_Id__c</fullName>
    <description>EMEA_SOW_StandardBank_009: Requirement 22 - Email Client Owner When Opportunity Created By Other User. Used in workflow. Not shown on page layout.</description>
    <formula>Account.OwnerId</formula>
    <label>Client Owner Id</label>
    <type>Text</type>
</CustomField>