force-app/main/default/objects/Opportunity/fields/Client_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Owner_Name__c</fullName>
    <formula>Account.Owner.FirstName &amp; &apos; &apos; &amp; Account.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Owner Name</label>
    <type>Text</type>
</CustomField>