force-app/main/default/objects/Opportunity/fields/Close_Year__c.field-meta.xml
<CustomField>
    <fullName>Close_Year__c</fullName>
    <description>This will give the year of close date of an opportunity.</description>
    <formula>TEXT(YEAR(Actual_Close_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Year</label>
    <type>Text</type>
</CustomField>