force-app/main/default/objects/Opportunity/fields/Closed_Opportunity_Score__c.field-meta.xml
<CustomField>
    <fullName>Closed_Opportunity_Score__c</fullName>
    <description>SGRPT-3422: This field stores the Opportunity score of an Opportunity before it is closed.</description>
    <inlineHelpText>Indication of Opportunity score prior to the Opportunity closing</inlineHelpText>
    <label>Closed Opportunity Score</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>