force-app/main/default/objects/Opportunity/fields/CommentsOnProgress__c.field-meta.xml
<CustomField>
    <fullName>CommentsOnProgress__c</fullName>
    <inlineHelpText>Update the most recent issues, risks or comments raised with this Opportunity at the start of the field for easy viewing (32000 characters or less)</inlineHelpText>
    <label>Comments On Progress</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>