force-app/main/default/objects/Opportunity/fields/Committee_Approved__c.field-meta.xml
<CustomField>
    <fullName>Committee_Approved__c</fullName>
    <description>Case#2642#1345 &amp; #3508 PCC - Rudolf Niehaus
Relevant Committee Response</description>
    <inlineHelpText>Has the Relevant Committee Approved the Opportunity?</inlineHelpText>
    <label>Committee Approved</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Response</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>