force-app/main/default/objects/Opportunity/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <description>Competitor won / lost against</description>
    <inlineHelpText>Competitor won / lost against</inlineHelpText>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Global Market</fullName>
            </value>
            <value>
                <fullName>Local Market</fullName>
            </value>
            <value>
                <fullName>No Competitor</fullName>
            </value>
            <value>
                <fullName>Regional Market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>