force-app/main/default/objects/Opportunity/fields/Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name__c</fullName>
    <description>SFP-9325 [c] This field is introduced for CVCA feature to allow printable view of the Client Page similar to the CVCA Template.</description>
    <inlineHelpText>Name of another Bank that the Client is intending on approaching or has approached for the provision of the product or service</inlineHelpText>
    <label>Competitor Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>