force-app/main/default/objects/Opportunity/fields/Concession_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Concession_Approval_Date__c</fullName>
    <description>SFP-9325 [c] Date the concession approval process obtains the final person&apos;s approval</description>
    <label>Concession Approval Date</label>
    <type>Date</type>
</CustomField>