force-app/main/default/objects/Opportunity/fields/Created_or_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_or_Modified_Date__c</fullName>
    <description>Formula field to store whether the opportunity has been created, or modified by a non-admin user.</description>
    <formula>IF(  
      AND (
        $Profile.Name &lt;&gt; &quot;Business Administrator&quot;,
        $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
        $Profile.Name &lt;&gt; &quot;Api User&quot;,
        LastModifiedDate &gt;  CreatedDate
      ) ,
LastModifiedDate , CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created or Modified Date</label>
    <type>Date</type>
</CustomField>