force-app/main/default/objects/Opportunity/fields/Credit_Paper_Application_Created__c.field-meta.xml
<CustomField>
    <fullName>Credit_Paper_Application_Created__c</fullName>
    <description>Date that the Digital Credit Paper was created [SFP-6735]</description>
    <inlineHelpText>Date that the Digital Credit Paper was created</inlineHelpText>
    <label>Credit Paper Application Created</label>
    <type>DateTime</type>
</CustomField>