force-app/main/default/objects/Opportunity/fields/Credit_Paper_Application_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Credit_Paper_Application_Created_By__c</fullName>
    <description>The person that created the Digital Credit Paper [SFP-6735]</description>
    <inlineHelpText>The person that created the Digital Credit Paper</inlineHelpText>
    <label>Credit Paper Application Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>