force-app/main/default/objects/Opportunity/fields/Credit_Paper_Decline_By__c.field-meta.xml
<CustomField>
    <fullName>Credit_Paper_Decline_By__c</fullName>
    <description>Credit Paper Declined by [SFP-6735]</description>
    <inlineHelpText>Credit Paper Declined by</inlineHelpText>
    <label>Credit Paper Decline By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>