force-app/main/default/objects/Opportunity/fields/Credit_Paper_Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Credit_Paper_Decline_Reason__c</fullName>
    <description>Credit Paper Declined Reason [SFP-6735]</description>
    <inlineHelpText>Credit Paper Declined Reason</inlineHelpText>
    <label>Credit Paper Decline Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>