force-app/main/default/objects/Opportunity/fields/Credit_Paper_Declined__c.field-meta.xml
<CustomField>
    <fullName>Credit_Paper_Declined__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Digital Credit Paper Decline [SFP-6735]</description>
    <inlineHelpText>Digital Credit Paper Decline</inlineHelpText>
    <label>Credit Paper Declined</label>
    <type>Checkbox</type>
</CustomField>