force-app/main/default/objects/Opportunity/fields/Credit_Paper_ID__c.field-meta.xml
<CustomField>
    <fullName>Credit_Paper_ID__c</fullName>
    <description>Digital Credit Paper ID [SFP-6735]</description>
    <inlineHelpText>Digital Credit Paper ID</inlineHelpText>
    <label>Credit Paper ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>