force-app/main/default/objects/Opportunity/fields/Credit_Paper_URL__c.field-meta.xml
<CustomField>
    <fullName>Credit_Paper_URL__c</fullName>
    <description>Digital Credit Paper URL [SFP-6735]</description>
    <inlineHelpText>Digital Credit Paper URL</inlineHelpText>
    <label>Credit Paper URL</label>
    <type>Url</type>
</CustomField>