force-app/main/default/objects/Opportunity/fields/Current_known_conflict_of_interest__c.field-meta.xml
<CustomField>
    <fullName>Current_known_conflict_of_interest__c</fullName>
    <inlineHelpText>Director /Board Member of the Client is also a Director/Board Member of Standard Bank and/or the Standard Bank Contracting Party</inlineHelpText>
    <label>Current Known Conflict</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>