force-app/main/default/objects/Opportunity/fields/Current_Year_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Revenue__c</fullName>
    <formula>Current_Year_Revenue_Num__c *  Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Sum of the Products Revenues Weighted by the Opportunity Probability Percentage. This value is reflected in ZAR with your currency displayed in brackets.</inlineHelpText>
    <label>Current Year Weighted Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>