force-app/main/default/objects/Opportunity/fields/Current_Year_Revenue_Currency_CommB__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Revenue_Currency_CommB__c</fullName>
    <description>US-2486 - New field for CommB Users</description>
    <formula>Current_Year_Revenue_Num_CommB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A sum of the estimated Current Year Revenue that is anticipated for this Opportunity, based on all Products added to the Opportunity. This value is reflected in ZAR with your currency displayed in brackets.</inlineHelpText>
    <label>Current Year Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>