force-app/main/default/objects/Opportunity/fields/Current_Year_Revenue_Num_CommB__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Revenue_Num_CommB__c</fullName>
    <description>US-2486 - New field for CommB</description>
    <label>Current Year Revenue (Num)</label>
    <summarizedField>SB_Product__c.Current_Year_Product_Revenue_Num_CommB__c</summarizedField>
    <summaryForeignKey>SB_Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>