force-app/main/default/objects/Opportunity/fields/Current_Year_Weighted_Revenue_Text__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Weighted_Revenue_Text__c</fullName>
    <description>Store the product&apos;s Current Year Weighted Revenue in a text format (EN-0885)</description>
    <formula>TEXT( Current_Year_Revenue__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field has been created to store the product&apos;s Current Year Weighted Revenue in a text format to avoid special characters being created in the Excel file and causing integration issues</inlineHelpText>
    <label>Current Year Weighted Revenue (Text)</label>
    <type>Text</type>
</CustomField>