force-app/main/default/objects/Opportunity/fields/Deal_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Maturity_Date__c</fullName>
    <description>SFP-9325 [c] Date the client&apos;s concession will be reviewed</description>
    <label>Deal Maturity Date</label>
    <type>Date</type>
</CustomField>