force-app/main/default/objects/Opportunity/fields/Deal_Size__c.field-meta.xml
<CustomField>
    <fullName>Deal_Size__c</fullName>
    <description>SFP-11353 [c] - This is the Total Value of the Deal/Opportunity</description>
    <inlineHelpText>This is the Total Value of the Deal/Opportunity (e.g VAF Loan R1000 000.00)</inlineHelpText>
    <label>Deal Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>