force-app/main/default/objects/Opportunity/fields/Earliest_Draw_Date_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Draw_Date_Rollup__c</fullName>
    <description>Case#141 - Rudolf Niehaus
Rollup earliest draw date of all the products</description>
    <label>Earliest Draw Date</label>
    <summarizedField>SB_Product__c.Earliest_Draw_Date_Rollup__c</summarizedField>
    <summaryForeignKey>SB_Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>