force-app/main/default/objects/Opportunity/fields/EmailAlertSent_14DAYS__c.field-meta.xml
<CustomField>
    <fullName>EmailAlertSent_14DAYS__c</fullName>
    <description>US-3918 &amp; US-3917 - A custom date field to track down the sending of the 14 days before estimated close date email alerts. It is necessary to avoid sending duplicate emails as the standard functionality would do (the process builder)</description>
    <label>EmailAlertSent(14DAYS)</label>
    <type>Date</type>
</CustomField>