force-app/main/default/objects/Opportunity/fields/Entity_Coverage_Sector__c.field-meta.xml
<CustomField>
    <fullName>Entity_Coverage_Sector__c</fullName>
    <formula>TEXT(Account.Entity_Coverage_Sector__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity Coverage Sector</label>
    <type>Text</type>
</CustomField>