force-app/main/default/objects/Opportunity/fields/Entrepreneur_Forum_Required__c.field-meta.xml
<CustomField>
    <fullName>Entrepreneur_Forum_Required__c</fullName>
    <description>(EN-896)</description>
    <inlineHelpText>This field identities whether the deal is required to be presented at the Commercial Banking Entrepreneur Forum</inlineHelpText>
    <label>Entrepreneur Forum Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>