force-app/main/default/objects/Opportunity/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <description>When a new event is created for the Opportunity ,storing the event subject in to this field.</description>
    <label>Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>