force-app/main/default/objects/Opportunity/fields/Expected_NII__c.field-meta.xml
<CustomField>
    <fullName>Expected_NII__c</fullName>
    <description>SFP-11353 [c] - Expected Net Interest Income</description>
    <inlineHelpText>Expected Net Interest Income</inlineHelpText>
    <label>Expected NII</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>