force-app/main/default/objects/Opportunity/fields/Expected_NIR__c.field-meta.xml
<CustomField>
    <fullName>Expected_NIR__c</fullName>
    <description>SFP-11353 [c] - Expected Net Interest Revenue</description>
    <inlineHelpText>Expected Net Interest Revenue</inlineHelpText>
    <label>Expected NIR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>