force-app/main/default/objects/Opportunity/fields/Expected_ROE__c.field-meta.xml
<CustomField>
    <fullName>Expected_ROE__c</fullName>
    <description>SFP-9325 [c] Expected ROE of the deal</description>
    <label>Expected ROE %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>