force-app/main/default/objects/Opportunity/fields/Factiva_Article_Id__c.field-meta.xml
<CustomField>
    <fullName>Factiva_Article_Id__c</fullName>
    <externalId>true</externalId>
    <label>Factiva Article Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>