force-app/main/default/objects/Opportunity/fields/First_Disbursement_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Disbursement_Date__c</fullName>
    <description>SFP-9325 [c] The date the first loan amount will pay out</description>
    <label>First Disbursement Date</label>
    <type>Date</type>
</CustomField>