force-app/main/default/objects/Opportunity/fields/Game_Changer__c.field-meta.xml
<CustomField>
    <fullName>Game_Changer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-1218 RTB - OM - Game Changers Conversion</description>
    <label>Game Changer</label>
    <referenceTo>Game_Changer__c</referenceTo>
    <relationshipLabel>Associated Opportunities</relationshipLabel>
    <relationshipName>Associated_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>