force-app/main/default/objects/Opportunity/fields/GCCR_Conflict_Description__c.field-meta.xml
<CustomField>
    <fullName>GCCR_Conflict_Description__c</fullName>
    <inlineHelpText>Details of Current Known Conflict of Interest (32000 characters or less)</inlineHelpText>
    <label>Conflict Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>