force-app/main/default/objects/Opportunity/fields/GCCR_Status__c.field-meta.xml
<CustomField>
    <fullName>GCCR_Status__c</fullName>
    <inlineHelpText>Status of the Opportunity with respect to Conflicts Clearance</inlineHelpText>
    <label>GCCR Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted for Conflicts Clearing</fullName>
            </value>
            <value>
                <fullName>Awaiting Response from the Conflicts Control Room</fullName>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Not Cleared</fullName>
            </value>
            <value>
                <fullName>Cleared with Conditions</fullName>
            </value>
            <value>
                <fullName>Re-submitted for Conflicts Clearing as Key Information has been Modified</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>