force-app/main/default/objects/Opportunity/fields/Globus_ID__c.field-meta.xml
<CustomField>
    <fullName>Globus_ID__c</fullName>
    <label>Globus ID</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>