force-app/main/default/objects/Opportunity/fields/Group_Parent_Coverage_Sector__c.field-meta.xml
<CustomField>
    <fullName>Group_Parent_Coverage_Sector__c</fullName>
    <formula>TEXT(Account.Group_Parent_Coverage_Sector__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Parent Coverage Sector</label>
    <type>Text</type>
</CustomField>